src/styles/theme.css
:root {
    --background: #000000;
    --foreground: #eeeeee;
}

@theme {
    --font-pixel: "Silkscreen", sans-serif;
    --font-hero: "Meta", sans-serif;
}

@theme inline {
    --color-background: var(--background);
}

@layer components {
    /* Theme for all pages */
    .page {
        @apply font-pixel max-w-7xl mx-auto px-4 sm:px-6 lg:px-8;
    }

    h1 {
        @apply flex justify-center text-7xl mb-6 text-shadow-[2px_2px_0px_#e94560];
    }

    h2 {
        @apply text-5xl mb-6 uppercase tracking-wide;
    }

    h3 {
        @apply text-3xl mb-6 uppercase tracking-wide;
    }

    p {
        @apply text-base leading-loose opacity-60 whitespace-pre-line max-w-prose;
    }

    .gliding-text {
        @apply transition-all duration-500 ease-out hover:translate-x-15
    }

    /* Dark pages */
    .dark {
        @apply bg-black text-white;
    }

    /* Light pages */
    .light {
        @apply bg-white text-black;
    }

    /* Theme for navigation */
    .nav {
        @apply font-pixel flex justify-between items-center h-fit;
    }
    .nav .title {
        @apply py-5 text-xl text-[#e94560] hover:text-white transition-colors;
    }

    .nav .item{
        @apply text-base text-gray-400 hover:text-[#e94560] transition-colors uppercase;
    }   

    .mobile-item {
        @apply font-pixel text-6xl text-gray-400 hover:text-[#e94560] transition-colors uppercase text-left;
    }

    /* Theme for hero section */  
    .hero h1 {
        transition: all 0.5s;
        font-variation-settings: "wght" 900, "ital" 1;
        font-family: "Silkscreen";
        font-size: 6rem;
        text-align: center;
        color: white;
        text-shadow: 10px 10px 0px #5a5a5a,
            45px 45px 10px #272727;
        cursor: pointer;
    }

    .hero h1:hover {
        font-variation-settings: "wght" 100, "ital" 0;
        text-shadow: none;
    }

    /* Theme for about section */
    .about .arrow-button {
        @apply text-white hover:text-[#e94560] transition-colors disabled:opacity-30;
    }

    .about .card {
        @apply w-full h-[70vh] flex flex-col rounded-2xl p-10 backdrop-blur-xl bg-black/10 border-2 border-white shadow-white shadow-[20px_20px_0px]}

    .about .card:hover {
        @apply border-[#e94560] shadow-[#e94560] shadow-[30px_30px_0px];
    }

    .about .contact {
        @apply hover:text-[#e94560] transition-colors border-2 border-white p-3 hover:border-[#e94560] flex items-center justify-center
    }

    /* Theme for experience section */
    .experience h1 {
        @apply break-all w-min text-left justify-end;
    }

    /* Theme for projects section */
    .btn-flip {
        padding: 0;
        opacity: 1;
        outline: 0;
        color: white;
        border: 2px solid white;
        line-height: 40px;
        position: relative;
        text-align: center;
        letter-spacing: 1px;
        display: inline-block;
        text-decoration: none;
        text-transform: uppercase;
        box-shadow: 10px 10px 0px #e94560;
    }

    /* hover */
    .btn-flip:hover:after {
        opacity: 1;
        transform: translateY(0) rotateX(0);
    }

    .btn-flip:hover:before {
        opacity: 0;
        transform: translateY(50%) rotateX(90deg);
    }

    /* after */
    .btn-flip:after {
        top: 0;
        left: 0;
        opacity: 0;
        width: 100%;
        color: #3a3a3a;
        
        display: block;
        transition: 0.3s; /* replace $speed */
        position: absolute;
        background: white;
        content: attr(data-back);
        transform: translateY(-50%) rotateX(90deg);
    }

    /* before */
    .btn-flip:before {
        top: 0;
        left: 0;
        opacity: 1;
        color: white;
        display: block;
        padding: 0 30px;
        line-height: 40px;
        transition: 0.3s; /* replace $speed */
        position: relative;
        background: #3a3a3a;
        content: attr(data-front);
        transform: translateY(0) rotateX(0);
    }

    .proj-card {
        @apply items-center justify-center;
    }

    .card_content {
        @apply flex flex-col gap-10 items-center py-5 px-10 
    }

    /* Theme for skills section */
    .skill {
        @apply px-3 py-1 text-sm bg-white text-black transition w-[150px] rounded-lg;
    }

    .skill:hover {
        @apply bg-black text-white shadow-[#e94560] shadow-[5px_5px_0px];
    }

    /* Theme for books section */
    .books .cards {
        display: flex;
        gap: 2rem;
        overflow-x: auto;
        scroll-snap-type: x mandatory;
        padding: 10rem;
        padding-left: calc(50% - 100px);
        padding-right: calc(50% - 100px);
        scrollbar-width: none; /* Firefox */
        -ms-overflow-style: none; /* IE/Edge */
    }
    .books .cards .card-inner {
        animation: rotateBook linear both;
        animation-timeline: --card;
    }

    .books .cards li {
        flex: 0 0 auto;
        width: 200px;
        height: 650px;
        aspect-ratio: 1;
        scroll-snap-align: center;

        view-timeline-name: --card;
        view-timeline-axis: inline;

        perspective: 1000px;
    }

    .books .cards img {
        width: 100%;
        height: 100%;
        object-fit: cover;

        border-radius: 0px;
        -webkit-box-reflect: below 0.01em
        linear-gradient(transparent, rgba(0,0,0,0.3));
    }

    .books .cards::-webkit-scrollbar {
        display: none; /* Chrome, Safari */
    }
    /* rotation effect */
    @keyframes rotateBook {
        0% {
            transform: rotateY(-45deg) scale(0.8);
        }
        50% {
            transform: rotateY(0deg) scale(1.2);
        }
        100% {
            transform: rotateY(45deg) scale(0.8);
        }
    }

}

/* Specific dimensions for Mobile devices */
@media (max-width: 1024px) {

    
    /* Nav */
    .nav .title {
        @apply text-5xl text-left py-10;
    }

    h1 {
        @apply text-[12rem] justify-center;
    }

    h2 {
        @apply text-5xl;
    }

    h3 {
        @apply text-4xl;
    }

    h4 {
        @apply text-3xl;
    }

    p {
        @apply text-4xl;
    }

    .hero h1 {
        @apply text-9xl;
    }

    /* About */
    .about .card {
        @apply w-full h-[50vh] flex flex-col rounded-4xl p-20 backdrop-blur-xl border-4 border-white shadow-white shadow-[40px_40px_0px]
    }
    .about .card:hover {
        @apply border-4 border-[#e94560] shadow-[#e94560] shadow-[50px_50px_0px]
    }
    .about .contact {
        @apply border-6 border-white w-32 h-32 items-center scroll-px-10
    }

    /* Skills */
    .skills h3 {
        @apply text-5xl;
    }
    .skill {
        @apply text-2xl;
    }

    /* Experience */
    .experience h1 {
        @apply flex text-9xl text-center w-max justify-center;
    }

    .experience p {
        @apply text-2xl;
    }

    /* Projects */
    .btn-flip {
        box-shadow: 50px 50px 0px #e94560;
        border: 8px solid white;
    }
    .btn-flip:before,
    .btn-flip:after {
        padding: 50px 100px;
    }
    .projects h1 {
        @apply text-[9rem];
    }

    .projects h3 {
        @apply text-6xl;
    }

    /* Books */
    .books .cards li {
        width: 500px;
        height: 1625px;
    }
}


@layer utilities {
    .bg-pixel-space {
        position: relative;
        overflow: visible;
    }

    .dark .bg-pixel-space {
        box-shadow: white;
    }

    .light .bg-pixel-space {
        box-shadow: black;
    }

    /* DOTS */
    .bg-pixel-space::before {
        content: "";
        position: absolute;
        inset: 0;

        width: 2px;
        height: 2px;

        box-shadow:
            120px 80px,
            300px 200px,
            500px 150px,
            700px 300px,
            900px 100px,
            1100px 250px,
            200px 400px,
            120px 180px,
            100px 200px,
            1800px 150px,
            700px 1000px,
            950px 200px,
            1000px 310px,
            1500px 300px,
            3500px 200px,
            4500px 1030px,
            4200px 480px,
            4800px 590px,
            3200px 1190px,
            7200px 670px,
            5300px 1310px;

            animation: pixelDrift 120s linear infinite;
    }

    /* HORIZONTAL LINES */
    .bg-pixel-space::after {
        content: "";
        position: absolute;
        inset: 0;
        overflow: hidden;
        width: 10px;
        height: 2px;

        transform: translate(-50%, -50%);

        box-shadow:
            200px 150px,
            600px 250px,
            1000px 300px,
            400px 500px,
            800px 650px,
            100px 100px,
            200px 300px,
            400px 150px,
            600px 250px,
            1000px 310px,
            1500px 300px,
            1800px 200px,
            300px 1030px,
            200px 480px,
            480px 590px,
            320px 1190px,
            720px 670px,
            530px 1310px;

            animation: pixelDrift 60s linear infinite;
    }

    /* VERTICAL LINES */
    .cross-layer {
        position: absolute;
        inset: 0;

        width: 2px;
        height: 10px;

        transform: translate(-50%, -50%);

        box-shadow:
            200px 150px,
            600px 250px,
            1000px 300px,
            400px 500px,
            800px 650px,
            100px 100px,
            200px 300px,
            400px 150px,
            600px 250px,
            1000px 310px,
            1500px 300px,
            350px 200px,
            450px 1030px,
            420px 480px,
            480px 590px,
            320px 1190px,
            720px 670px,
            530px 1310px;

            animation: pixelDrift 60s linear infinite;
    }

    @keyframes pixelDrift {
        from {
            transform: translate(-50%, -50%) translateY(0);
        }
        to {
            transform: translate(-50%, -50%) translateY(-500px);
        }
    }
}

